<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.standings.StandingsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:visibility="gone" />


            <TextView
                android:id="@+id/leagueName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mainTextColor"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04000002" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season"
                android:textColor="@color/mainTextColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/leagueName"
                app:layout_constraintStart_toStartOf="@+id/leagueName"
                app:layout_constraintTop_toBottomOf="@+id/leagueName"
                app:layout_constraintVertical_bias="0.00999999" />


            <TextView
                android:id="@+id/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/standings_header_title"
                android:textSize="@dimen/standings_header_textsize"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/standings_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.92" />

            <TextView
                android:id="@+id/team_points"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/standings_header_points"
                android:textAlignment="center"
                android:textSize="@dimen/standings_header_textsize"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/standings_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.92" />

            <TextView
                android:id="@+id/matches_lost"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/standings_header_matches_lost"
                android:textAlignment="center"
                android:textSize="@dimen/standings_header_textsize"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/standings_list"
                app:layout_constraintEnd_toStartOf="@+id/goals_diff_header"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.92" />

            <TextView
                android:id="@+id/matches_drawn"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/standings_header_matches_draw"
                android:textAlignment="center"
                android:textSize="@dimen/standings_header_textsize"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/standings_list"
                app:layout_constraintEnd_toStartOf="@+id/matches_lost"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.92" />

            <TextView
                android:id="@+id/matches_won"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/standings_header_matches_won"
                android:textAlignment="center"
                android:textSize="@dimen/standings_header_textsize"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/standings_list"
                app:layout_constraintEnd_toStartOf="@+id/matches_drawn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.92" />

            <TextView
                android:id="@+id/matches_played"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/standings_header_matches_played"
                android:textAlignment="center"
                android:textSize="@dimen/standings_header_textsize"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/standings_list"
                app:layout_constraintEnd_toStartOf="@+id/matches_won"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.92" />

            <TextView
                android:id="@+id/goals_diff_header"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/standings_goals_diff"
                android:textAlignment="center"
                android:textSize="@dimen/standings_header_textsize"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/standings_list"
                app:layout_constraintEnd_toStartOf="@+id/team_points"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.92" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/standings_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="16dp"
                tools:listitem="@layout/standings_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>